core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__delete_statement.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"DELETE FROM a WHERE b = \\\"c\\\"\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_delete_statement
- pre_visit_delete_from_clause
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_delete_from_clause
- pre_visit_where_clause
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_where_clause
- post_visit_delete_statement
- post_visit_statement
