core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__explain_statement-3.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"EXPLAIN SHOW TAG KEYS\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_explain_statement
- pre_visit_statement
- pre_visit_show_tag_keys_statement
- post_visit_show_tag_keys_statement
- post_visit_statement
- post_visit_explain_statement
- post_visit_statement
