core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__explain_statement-8.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"EXPLAIN EXPLAIN SELECT * from cpu\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_explain_statement
- pre_visit_statement
- pre_visit_explain_statement
- pre_visit_statement
- pre_visit_select_statement
- pre_visit_select_field_list
- pre_visit_select_field
- pre_visit_expr
- post_visit_expr
- post_visit_select_field
- post_visit_select_field_list
- pre_visit_select_from_clause
- pre_visit_select_measurement_selection
- pre_visit_qualified_measurement_name
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_qualified_measurement_name
- post_visit_select_measurement_selection
- post_visit_select_from_clause
- post_visit_select_statement
- post_visit_statement
- post_visit_explain_statement
- post_visit_statement
- post_visit_explain_statement
- post_visit_statement
